# vpnmupd

./: .gitignore  Dockerfile.test  pyproject.toml
.github/workflows/: .ci.yml  ci.yml
tests/: test_module01.py  test_module02.py
vpnmupd/: __main__.py  cli.py  core.py  utils.py  versions.py
